--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.4",
+    "@react-navigation/bottom-tabs": "^5.11.7",
     "expo": "~40.0.0",
+    "expo-constants": "^10.0.1",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
